Fix issue where a full-width laid out post w/ no featured/thumbnail image would run into spacing issues; just adding a fixed height spacer instead of an <img> should fix it.
Also a small margin fix so mobile layouts don't run into overly long 
title issues.

--- a/assets/css/scss/_home.scss
+++ b/assets/css/scss/_home.scss
@@ -39,9 +39,21 @@
       filter: brightness(40%);
     }
 
+    .post_banner .spacer {
+      width: 100%;
+      max-width: 100%;
+      height: 200px;
+      background-color: $color-sky;
+      filter: brightness(40%);
+      border: 1px solid #f6f6f6;
+      border-radius: 7px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     .post_body {
       position: absolute;
-      bottom: 24px;
+      bottom: 0;
     }
 
     // Invert all the text colors to show up over the filtered post BG
