--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,22 +131,35 @@
 }
 
 /* line 42, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
-.blog_index_area .first_full_width .post_body {
-  position: absolute;
-  bottom: 24px;
+.blog_index_area .first_full_width .post_banner .spacer {
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
+  background-color: #CAEBF2;
+  filter: brightness(40%);
+  border: 1px solid #f6f6f6;
+  border-radius: 7px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* line 48, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 54, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+.blog_index_area .first_full_width .post_body {
+  position: absolute;
+  bottom: 0;
+}
+
+/* line 60, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_title a {
   color: #EFEFEF;
 }
 
-/* line 50, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 62, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_title a::before {
   background-color: #EFEFEF;
 }
 
-/* line 53, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 65, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_title a::after {
   background: linear-gradient(to right, #eeeeee 0, #eeeeee 35%, #eeeeee 65%, rgba(255, 255, 255, 0) 100%);
   background: -ms-linear-gradient(left, #eeeeee 0, #eeeeee 35%, #eeeeee 65%, rgba(255, 255, 255, 0) 100%);
@@ -156,48 +169,48 @@
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, #eeeeee), color-stop(35%, #eeeeee), color-stop(65%, #eeeeee), color-stop(100%, rgba(255, 255, 255, 0)));
 }
 
-/* line 63, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 75, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_meta_item {
   color: #E0E0E0;
 }
 
-/* line 65, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 77, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_meta_item .post_meta_icon {
   color: #E0E0E0;
 }
 
-/* line 66, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 78, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_meta_item.meta_item_category a {
   color: #E0E0E0;
 }
 
-/* line 68, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 80, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_meta_item.meta_item_category a:hover {
   color: #EFEFEF;
 }
 
-/* line 72, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 84, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_date_link {
   color: #E0E0E0;
 }
 
-/* line 74, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 86, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .blog_index_area .first_full_width .post_date_link:hover .post_meta_item {
   color: #EFEFEF;
 }
 
-/* line 80, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 92, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link .continue_reading_dots {
   float: right;
   margin-left: 0;
 }
 
-/* line 84, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 96, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link .continue_reading_dots .continue_reading_squares {
   float: left;
 }
 
-/* line 88, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 100, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link .continue_reading_dots .continue_reading_squares > span {
   width: 2px;
   height: 2px;
@@ -213,7 +226,7 @@
   transition: all 0.15s ease-in;
 }
 
-/* line 103, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 115, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link .continue_reading_dots .readmore_icon {
   float: left;
   margin-top: 9px;
@@ -226,13 +239,13 @@
   transition: all 0.15s ease-in;
 }
 
-/* line 117, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 129, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link:hover .continue_reading_dots .continue_reading_squares > span {
   margin-right: 4px;
   background-color: #ff374a;
 }
 
-/* line 122, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
+/* line 134, ../../../../../Users/allen/Projects/alia-child/assets/css/scss/_home.scss */
 .post_date_link:hover .continue_reading_dots .readmore_icon {
   margin-left: 1px;
   color: #ff374a;
